# advent-of-code-2025-rust

./: Cargo.toml  Makefile  README.md  justfile  tests.rs  tmpl.yaml
src/: helpers.rs  main.rs
src/core/: vector2.rs  vector3.rs
src/day1/: mod.rs  tests.rs
src/day2/: mod.rs  tests.rs
src/day3/: mod.rs  tests.rs
src/day4/: instructions.md  mod.rs  tests.rs
src/day5/: instructions.md  mod.rs  tests.rs
src/day6/: mod.rs  tests.rs
src/day7/: mod.rs  tests.rs
src/day8/: mod.rs  tests.rs
src/day9/: mod.rs  tests.rs
template/: Makefile.tmpl.benchmark  Makefile.tmpl.benchmark_all_individually  tmpl.yaml
template/src/: main.rs.tmpl_arg  main.rs.tmpl_fn_call  main.rs.tmpl_mod
template/src/day$day_number$/: mod.rs.tmpl  tests.rs.tmpl
