[package]
name = "advent-of-code-2023-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.10", features = ["derive"]}
lazy_static = "1.4.0"
regex = "1.10.2"
tokio = {version = "1.16.1", features = ["full"]}
num-integer = "0.1.45"
log = "0.4.20"
env_logger = "0.10.1"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
